# goldmine

./: .bazelrc  .mockery.yaml  BAZEL_CHEATSHEET.md  BUILD.bazel  CDB.md  MODULE.bazel  Makefile  TODO.md  commits.json  go.mod  go.sum  launch.md  notes.md  pull.json  puppeteerrc.js.tpl  query_direct_deps  tools.go
.github/workflows/: jsdoc.yml  upload-to-gold.yml
bazel/: app_container.bzl  get_workspace_status.sh
bazel/open_ar/: BUILD.bazel  open_ar.go
bazel/test_on_env/: BUILD.bazel  test_on_env.bzl
ci/: Makefile
ci/cmd/github_webhook/: BUILD.bazel  Makefile  main.go
ci/cmd/workflow/: BUILD.bazel  Makefile
ci/go/: BUILD.bazel  shared.go
ci/workflow/: BUILD.bazel  Makefile  main.go
cmd/presubmit/: BUILD.bazel  presubmit.go  presubmit_test.go
docker/: Dockerfile
elements-sk/generate_icons/: BUILD.bazel  generate_icons.go
fiddlek/: Makefile
go.goldmine.build/: index.html
go/alerts/: BUILD.bazel
go/allowed/: BUILD.bazel  allowed.go  infra_auth_allowed.go  infra_auth_allowed_test.go
go/alogin/: BUILD.bazel  login.go  login_test.go
go/android_hashlookup/: BUILD.bazel  main.go
go/android_skia_checkout/: BUILD.bazel  android_skia_checkout.go
go/androidbuild/: BUILD.bazel  androidbuild.go  androidbuild_test.go  commits.go
go/atomic_miss_cache/: BUILD.bazel
go/auditlog/: BUILD.bazel  auditlog.go
go/auth/: BUILD.bazel  auth.go  auth_test.go
go/baseapp/: BUILD.bazel  baseapp.go  baseapp_test.go
go/bazel/: BUILD.bazel  parse.go
go/calc/: BUILD.bazel  funcs.go  funcs_test.go  parser.go  parser_test.go
go/chatbot/: BUILD.bazel  bot.go
go/chrome_branch/: BUILD.bazel  chrome_branch.go  chrome_branch_test.go
go/cleanup/: BUILD.bazel  cleanup.go  signal.go
go/codesearch/: BUILD.bazel  codesearch.go
go/comment/: BUILD.bazel
go/common/: BUILD.bazel  common.go  common_test.go  with.go
go/config/: BUILD.bazel  config.go  config_test.go
go/counters/: BUILD.bazel  counters.go  counters_test.go
go/ctxutil/: BUILD.bazel  ctxutil.go
go/dataproc/: BUILD.bazel  pyspark.go
go/deepequal/: BUILD.bazel
go/docker/: BUILD.bazel  docker.go  docker_test.go
go/email/: BUILD.bazel  email.go
go/emulators/: BUILD.bazel  emulators.go  start.go
go/emulators/cockroachdb_instance/: BUILD.bazel  cockroachdb_instance.go
go/emulators/gcp_emulator/: BUILD.bazel  gcp_emulator.go
go/ephemeral_storage/: BUILD.bazel  ephemeral_storage.go
go/exec/: BUILD.bazel  exec.go  exec_test.go
go/executil/: BUILD.bazel  executil_test.go
go/fileutil/: BUILD.bazel  fileutil.go  fileutil_test.go
go/firestore/: BUILD.bazel  firestore.go  firestore_test.go
go/firestore/testutils/: BUILD.bazel  testutils.go
go/gce/: BUILD.bazel  gce.go
go/gce/server/: BUILD.bazel  server.go
go/gce/server/base-image/: BUILD.bazel  create_image.go
go/gcr/: BUILD.bazel  gcr.go  gcr_test.go
go/gcs/: BUILD.bazel  download_helper.go  download_helper_test.go  helpers.go  helpers_test.go
go/gcs/gcs_testutils/: BUILD.bazel  testing.go
go/gcs/gcsclient/: BUILD.bazel  gcsclient.go
go/gcs/mem_gcsclient/: BUILD.bazel  memory_client.go
go/gcs/mocks/: BUILD.bazel  GCSClient.go  mocks.go  mocks_test.go
go/gerrit/: BUILD.bazel  change_edit_helpers.go  gerrit.go  (+1 more)
go/gitiles/mocks/: BUILD.bazel  GitilesRepo.go  mocks_test.go
go/gitstore/: BUILD.bazel  repo_impl.go  types.go
go/gitstore/mem_gitstore/: BUILD.bazel  mem_gitstore.go  mem_gitstore_test.go  repo_impl_test.go
go/gitstore/mocks/: BUILD.bazel  GitStore.go  mocks.go  mocks_test.go
go/gitstore/shared_tests/: BUILD.bazel  shared_tests.go
go/golang/: BUILD.bazel  golang.go
go/now/mocks/: BUILD.bazel  generate.go  mocks.go
go/profsrv/: BUILD.bazel  profsrv.go
go/repo_root/: BUILD.bazel  repo_root.go
go/sql/exporter/: BUILD.bazel
go/sql/pool/: BUILD.bazel
go/sql/pool/mocks/: BUILD.bazel  mocks_test.go
go/sql/pool/wrapper/timeout/: BUILD.bazel  timeout.go
go/tracing/: BUILD.bazel  tracing.go
go/tracing/loggingtracer/: BUILD.bazel  loggingtracer.go  loggingtracer_test.go
go/tracing/tracingtest/: BUILD.bazel
gold-client/: README.md
golden/: BUILD.bazel  Makefile
golden/cmd/diffcalculator/: BUILD.bazel  diffcalculator.go  diffcalculator_test.go
golden/cmd/diffcalculator/impl/: BUILD.bazel  impl.go  impl_test.go
golden/cmd/gitilesfollower/: BUILD.bazel  gitilesfollower.go  gitilesfollower_manual_test.go  gitilesfollower_test.go
golden/cmd/gitilesfollower/impl/: BUILD.bazel  impl.go  impl_test.go
golden/cmd/gitilesfollower/mocks/: BUILD.bazel  GitilesLogger.go  mocks_test.go
golden/cmd/gold-server/: BUILD.bazel  main.go
golden/cmd/gold_frontend/: BUILD.bazel  gold_frontend.go  gold_frontend_test.go
golden/cmd/gold_frontend/impl/: BUILD.bazel  impl.go  impl_test.go
golden/cmd/gold_ingestion/: BUILD.bazel  gold_ingestion.go  gold_ingestion_test.go
golden/cmd/gold_ingestion/impl/: BUILD.bazel  impl.go  impl_test.go
golden/cmd/periodictasks/: BUILD.bazel  periodictasks.go  periodictasks_test.go
golden/cmd/periodictasks/impl/: BUILD.bazel  impl.go  impl_test.go
golden/go/config/: BUILD.bazel  config.go  config_test.go
golden/go/db/: BUILD.bazel  db.go
golden/go/ingestion_processors/: BUILD.bazel  common.go  common_test.go  github.go  primarysql.go  primarysql_test.go  tryjob_ingestion.go  tryjob_ingestion_test.go
golden/go/ingestion_processors/mocks/: BUILD.bazel
golden/go/ingestion_processors/testdata/: from_goldctl_patchset_order_provided.json  from_goldctl_recent_fields.json  tryjob_rerun.json
golden/go/mocks/: BUILD.bazel  GCSClient.go  mocks.go  mocks_test.go
infra-sk/: BUILD.bazel  themes.scss
jsdoc/: BUILD.bazel  Makefile
jsdoc/go/jsdoc/: BUILD.bazel  main.go
jsdoc/page/: BUILD.bazel
jsdoc/pages/: BUILD.bazel  index.scss
kube/: Makefile  build_base_release
licenses/: LICENSES.md  check.sh
new_element/: BUILD.bazel  main.go
perf/: BUILD.bazel  FORMAT.md  Makefile
prime/: README.md
puppeteer-tests/: BUILD.bazel  util.ts
scripts/: BUILD.bazel  radix_dir.go
skolo/: README.md
upload_to_gold/: README.md  localupload.sh  upload.sh
(+1287 files in other folders)
