load("//bazel:app_container.bzl", "app_container")

#
app_container(
    name = "jsdoc",
    base = "@ubuntu",
    cmd = ["--resources_dir=/usr/local/share/jsdoc/dist"],
    entrypoint = "/usr/local/bin/jsdoc",
    exe = "//jsdoc/go/jsdoc:jsdoc",
    pages = [
        "//elements-sk/modules/icons-demo-sk:icons-demo-sk-demo",
        "//infra-sk/modules/theme-chooser-sk:theme-chooser-sk-demo",
        "//jsdoc/page:index",
    ],
    repository = "us-east1-docker.pkg.dev/api-project-146332866891/goldmine/jsdoc",
)
