load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "workflow_lib",
    srcs = ["main.go"],
    importpath = "go.goldmine.build/ci/workflow",
    visibility = ["//visibility:private"],
    deps = [
        "//ci/go",
        "//go/common",
        "//go/git",
        "//go/git/provider/providers/gitapi",
        "//go/skerr",
        "//go/sklog",
        "@io_temporal_go_sdk//activity",
        "@io_temporal_go_sdk//client",
        "@io_temporal_go_sdk//temporal",
        "@io_temporal_go_sdk//worker",
        "@io_temporal_go_sdk//workflow",
    ],
)

go_binary(
    name = "workflow",
    embed = [":workflow_lib"],
    visibility = ["//visibility:public"],
)
