load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "emulators",
    srcs = [
        "emulators.go",
        "emulators_sysprocattr.go",
        "emulators_sysprocattr_linux.go",
        "start.go",
    ],
    importpath = "go.goldmine.build/go/emulators",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel/go/bazel",
        "//go/skerr",
        "//go/sktest",
    ],
)
