load("@rules_go//go:def.bzl", "go_library")
load("//bazel/go:go_test.bzl", "go_test")

go_library(
    name = "gcs",
    srcs = [
        "download_helper.go",
        "helpers.go",
        "types.go",
    ],
    importpath = "go.goldmine.build/go/gcs",
    visibility = ["//visibility:public"],
    deps = [
        "//go/skerr",
        "//go/sklog",
        "//go/untar",
        "//go/util",
        "@com_google_cloud_go_storage//:storage",
        "@org_golang_google_api//iterator",
    ],
)

go_test(
    name = "gcs_test",
    srcs = ["helpers_test.go"],
    deps = [
        ":gcs",
        "//go/gcs/mem_gcsclient",
        "@com_github_stretchr_testify//require",
    ],
)
