load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "gitstore",
    srcs = [
        "repo_impl.go",
        "types.go",
    ],
    importpath = "go.goldmine.build/go/gitstore",
    visibility = ["//visibility:public"],
    deps = [
        "//go/git",
        "//go/git/repograph",
        "//go/skerr",
        "//go/sklog",
        "//go/vcsinfo",
    ],
)
