load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "golang",
    srcs = ["golang.go"],
    importpath = "go.goldmine.build/go/golang",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel/external/rules_go",
        "//bazel/go/bazel",
        "//go/skerr",
    ],
)
