load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "repo_root",
    srcs = ["repo_root.go"],
    importpath = "go.goldmine.build/go/repo_root",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel/go/bazel",
        "//go/git/git_common",
        "//go/skerr",
    ],
)
