load("//infra-sk:index.bzl", "sass_library", "sk_page", "ts_library")

sk_page(
    name = "index",
    html_file = "index.html",
    sass_deps = [
    ],
    scss_entry_point = "index.scss",
    sk_element_deps = [
    ],
    ts_deps = [
    ],
    ts_entry_point = "index.ts",
)

sass_library(
    name = "index_sass_lib",
    srcs = ["index.scss"],
    visibility = ["//visibility:public"],
)

ts_library(
    name = "index_ts_lib",
    srcs = ["index.ts"],
    visibility = ["//visibility:public"],
)
