load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "gcp_emulator",
    srcs = ["gcp_emulator.go"],
    importpath = "go.goldmine.build/go/emulators/gcp_emulator",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel/external/google_cloud_sdk",
        "//go/emulators",
        "//go/skerr",
        "//go/sktest",
    ],
)
