load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "testutils",
    srcs = ["testutils.go"],
    importpath = "go.goldmine.build/go/firestore/testutils",
    visibility = ["//visibility:public"],
    deps = [
        "//go/emulators/gcp_emulator",
        "//go/firestore",
        "//go/sktest",
        "//go/util",
    ],
)
