load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "go.goldmine.build/go/gce/server",
    visibility = ["//visibility:public"],
    deps = [
        "//go/auth",
        "//go/common",
        "//go/gce",
        "//go/sklog",
    ],
)
