load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = ["mocks.go"],
    importpath = "go.goldmine.build/go/gcs/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//go/gcs",
        "@com_github_stretchr_testify//mock",
        "@com_google_cloud_go_storage//:storage",
    ],
)
