load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = ["mocks.go"],
    importpath = "go.goldmine.build/go/gitiles/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//go/git",
        "//go/gitiles",
        "//go/vcsinfo",
        "@com_github_stretchr_testify//mock",
    ],
)
