load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = [
        "TimeTicker.go",
        "generate.go",
    ],
    importpath = "go.goldmine.build/go/now/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//go/now",
        "@com_github_stretchr_testify//mock",
    ],
)
