load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "pool",
    srcs = ["pool.go"],
    importpath = "go.goldmine.build/go/sql/pool",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jackc_pgconn//:pgconn",
        "@com_github_jackc_pgx_v4//:pgx",
        "@com_github_jackc_pgx_v4//pgxpool",
    ],
)
