load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "diffcalculator_lib",
    srcs = ["diffcalculator.go"],
    importpath = "go.goldmine.build/golden/cmd/diffcalculator",
    visibility = ["//visibility:private"],
    deps = [
        "//go/common",
        "//go/sklog",
        "//golden/cmd/diffcalculator/impl",
        "//golden/go/config",
    ],
)

go_binary(
    name = "diffcalculator",
    embed = [":diffcalculator_lib"],
    visibility = ["//visibility:public"],
)
