load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel/go:go_test.bzl", "go_test")

go_library(
    name = "gitilesfollower_lib",
    srcs = ["gitilesfollower.go"],
    importpath = "go.goldmine.build/golden/cmd/gitilesfollower",
    visibility = ["//visibility:private"],
    deps = [
        "//go/common",
        "//go/httputils",
        "//go/sklog",
        "//golden/cmd/gitilesfollower/impl",
        "//golden/go/config",
        "//golden/go/sql",
        "@com_github_jackc_pgx_v4//pgxpool",
    ],
)

go_binary(
    name = "gitilesfollower",
    embed = [":gitilesfollower_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "gitilesfollower_test",
    srcs = ["gitilesfollower_manual_test.go"],
    embed = [":gitilesfollower_lib"],
)
