load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gold-server_lib",
    srcs = ["main.go"],
    importpath = "go.goldmine.build/golden/cmd/gold-server",
    visibility = ["//visibility:private"],
    deps = [
        "//go/common",
        "//go/httputils",
        "//go/profsrv",
        "//go/sklog",
        "//golden/cmd/gold_ingestion/impl",
        "//golden/go/config",
        "//golden/go/services",
        "@org_golang_x_net//context",
    ],
)

go_binary(
    name = "gold-server",
    embed = [":gold-server_lib"],
    visibility = ["//visibility:public"],
)
