load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gold_frontend_lib",
    srcs = ["gold_frontend.go"],
    importpath = "go.goldmine.build/golden/cmd/gold_frontend",
    visibility = ["//visibility:private"],
    deps = [
        "//go/common",
        "//go/sklog",
        "//golden/cmd/gold_frontend/impl",
        "//golden/go/config",
    ],
)

go_binary(
    name = "gold_frontend",
    embed = [":gold_frontend_lib"],
    visibility = ["//visibility:public"],
)
