load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel/go:go_test.bzl", "go_test")

go_library(
    name = "gold_ingestion_lib",
    srcs = ["gold_ingestion.go"],
    importpath = "go.goldmine.build/golden/cmd/gold_ingestion",
    visibility = ["//visibility:private"],
    deps = [
        "//go/common",
        "//go/sklog",
        "//golden/cmd/gold_ingestion/impl",
        "//golden/go/config",
    ],
)

go_binary(
    name = "gold_ingestion",
    embed = [":gold_ingestion_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "gold_ingestion_test",
    srcs = ["gold_ingestion_test.go"],
    embed = [":gold_ingestion_lib"],
)
