load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "periodictasks_lib",
    srcs = ["periodictasks.go"],
    importpath = "go.goldmine.build/golden/cmd/periodictasks",
    visibility = ["//visibility:private"],
    deps = [
        "//go/common",
        "//go/sklog",
        "//golden/cmd/periodictasks/impl",
        "//golden/go/config",
    ],
)

go_binary(
    name = "periodictasks",
    embed = [":periodictasks_lib"],
    visibility = ["//visibility:public"],
)
