load("@rules_go//go:def.bzl", "go_library")
load("//bazel/go:go_test.bzl", "go_test")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "go.goldmine.build/golden/go/config",
    visibility = ["//visibility:public"],
    deps = [
        "//go/config",
        "//go/git/provider",
        "//go/skerr",
        "//go/util",
        "//golden/go/publicparams",
        "@com_github_flynn_json5//:json5",
    ],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    data = glob(["testdata/**"]),
    embed = [":config"],
    deps = [
        "//go/testutils",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
