load("@rules_go//go:def.bzl", "go_library")
load("//bazel/go:go_test.bzl", "go_test")

go_library(
    name = "ingestion_processors",
    srcs = [
        "common.go",
        "github.go",
        "primarysql.go",
        "tryjob_ingestion.go",
    ],
    importpath = "go.goldmine.build/golden/go/ingestion_processors",
    visibility = ["//visibility:public"],
    deps = [
        "//go/httputils",
        "//go/metrics2",
        "//go/now",
        "//go/paramtools",
        "//go/skerr",
        "//go/sklog",
        "//go/sql/sqlutil",
        "//go/util",
        "//go/vcsinfo",
        "//golden/cmd/gitilesfollower/impl",
        "//golden/go/clstore",
        "//golden/go/code_review",
        "//golden/go/code_review/github_crs",
        "//golden/go/continuous_integration",
        "//golden/go/continuous_integration/simple_cis",
        "//golden/go/ingestion",
        "//golden/go/jsonio",
        "//golden/go/sql",
        "//golden/go/sql/schema",
        "//golden/go/types",
        "@com_github_cockroachdb_cockroach_go_v2//crdb/crdbpgx",
        "@com_github_hashicorp_golang_lru//:golang-lru",
        "@com_github_jackc_pgx_v4//:pgx",
        "@com_github_jackc_pgx_v4//pgxpool",
        "@io_opencensus_go//trace",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "ingestion_processors_test",
    srcs = [
        "common_test.go",
        "primarysql_test.go",
        "tryjob_ingestion_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":ingestion_processors"],
    deps = [
        "//go/httputils",
        "//go/metrics2",
        "//go/now",
        "//go/paramtools",
        "//go/skerr",
        "//go/sklog",
        "//go/testutils",
        "//go/vcsinfo",
        "//go/vcsinfo/mocks",
        "//golden/go/clstore",
        "//golden/go/code_review",
        "//golden/go/code_review/gerrit_crs",
        "//golden/go/code_review/mocks",
        "//golden/go/continuous_integration",
        "//golden/go/continuous_integration/mocks",
        "//golden/go/continuous_integration/simple_cis",
        "//golden/go/ingestion",
        "//golden/go/jsonio",
        "//golden/go/sql/databuilder",
        "//golden/go/sql/datakitchensink",
        "//golden/go/sql/schema",
        "//golden/go/sql/sqltest",
        "//golden/go/types",
        "@com_github_hashicorp_golang_lru//:golang-lru",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)
