load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = [
        "GCSClient.go",
        "mocks.go",
    ],
    importpath = "go.goldmine.build/golden/go/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//golden/go/storage",
        "//golden/go/types",
        "@com_github_stretchr_testify//mock",
    ],
)
